# IKAPI

./: .gitignore  .replit  dc_extraction_status.txt  expressway_test_result.json  pyproject.toml  replit.md  search.sh
attached_assets/: IKAPI_SEARCH_REFERENCE_AND_VISION.md  Master_Prompt_PromptForge_v1_1772286363153.md  Pasted--MASTER-PLANNING-PROTOCOL-Pehle-Dekho-Phir-Socho-Phir-P_1772377797942.txt  Pasted--REPLIT-AI-MASTER-POST-IMPLEMENTATION-AUDIT-PROTOCOL-AB_1772388917684.txt  Pasted-DEEP-QUALITY-AUDIT-PROMPT-GENOME-RESEARCH-REPORT-SYSTEM_1772436529880.txt  Pasted-Introduction-Please-use-our-Python-JAVA-client-from-our_1772268437817.txt  Pasted-Sync-mode-callback-url-nahi-doge-toh-API-turant-jawab-d_1772394432501.txt  draft_2e39b5ce-87b4-48bf-9fda-a95b4a11143f_edited_1772304241652.docx  draft_cd0120ee-bf59-4a52-9a0e-06dc6f762c17_edited_1772286923294.docx  genome_(1)_1772396876425.md
java/: pom.xml
web/: app.py  auto_tagger.py  conflict_radar.py  cost_tracker.py  db.py  expressway.py  expressway_prompts.py  extract_dc_genomes.py  gemini_service.py  genome_config.py  genome_research.py  parallel_claude.py  pipeline.py  query_generator.py  submit_test_pleading.py  synthesis.py  taxonomy_seed.py  test_claude_calls.py  test_dc_parallel_genomes.py  test_expressway.py  test_parallel_claude.py  topic_synthesis.py
web/static/: app.js  genome_175356438_Kaveri_Plastics_vs_Mahdoom_Bawa_Bahrudeen_Noorul_on_19_September_2025.json  genome_47858029_A.C._Narayanan_vs_State_Of_Maharashtra_And_Anr_on_13_September_2013.json  genome_extraction_prompt.md  genome_master_prompt_v3.1.md  (+6 more)
(+1 files in other folders)
