[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "google-genai>=1.65.0",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "tenacity>=9.1.4",
]
